--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,6 +37,7 @@ section#telefone{
     height: 627px;
     width: 311px;
     /*Fundo da section é a imagem*/
+    /*background: url('../imagens/frame-iphone.png');*/
     background: url('../imagens/frame-iphone.png');
     background-repeat: no-repeat;
 }
